load smaller portfolio images on smaller screens; fix tabbing

--- a/client/components/Header/_header.scss
+++ b/client/components/Header/_header.scss
@@ -1,3 +1,7 @@
+.skip-link {
+  @include visuallyhidden--focusable();
+}
+
 .header-wrapper {
   margin-right: -#{get-size(side-margin)};
   margin-left: -#{get-size(side-margin)};
